*fixed checksum *fixed package.json error because of previous merge *fixed overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,3 +14,6 @@ p {
 .card .card-content .error{
     color: #e51c23;
 }
+.card .card-content{
+    overflow: hidden;
+}
